first portfolio changes and upgrade1 complete!

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-UA-compatible" content="ie=edge">
-    <link href="style.css" rel="stylesheet">
+    <link href="/styles/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans&display=swap" rel="stylesheet">
     <title>My personal Portfolio Project</title>
 </head>
@@ -17,6 +17,7 @@
                 <li> <a href="welcome-section">About</a> </li>
                 <li> <a href="#projects">Work</a> </li>
                 <li> <a href="#contact">Contact</a> </li>
+                <li> <a href="#starwars.html"> StarWars</a> </li>
             </ul>
         </nav>
     </header>
@@ -34,14 +35,13 @@
             <a id="profile-link" class="project-tile" href="https://wturner7.weebly.com/education-part-2.html" target="_blank">
                 <img class="project-image" src="https://wturner7.weebly.com/uploads/5/9/1/2/5912879/turner-creative-animalhybrid-2_orig.jpg" alt="project" />
                 <p class="project-title">
-                    <span> My Blog </span>
+                    <span> My Community College Blog </span>
                 </p>
             </a>
-            <a class="project-tile" href="https://wturner7.weebly.com/education-part-2.html" target="_blank">
-                <img class="project-image" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/31947985_1897786430255261_1617341936140550144_n.jpg?_nc_cat=105&_nc_oc=AQn6OOgokZSCb50D6sD0J1Yv7Wkt6GxUXBYQv8JzBuXd2yIbH9GLUCHaq0apq-NCG42uVvgfaW0KZggF9OGT9ekS&_nc_ht=scontent-sjc3-1.xx&oh=d95b0e0bff26fb57614c9366368ead49&oe=5E357AB5"
-                    alt="project" />
+            <a class="project-tile" href="starwars.html" target="_blank">
+                <img class="project-image" src="https://starwars-visualguide.com/assets/img/films/7.jpg" alt="project" />
                 <p class="project-title">
-                    <span> My Art Projects </span> </p>
+                    <span> Star Wars Fun </span> </p>
             </a>
             <a class="project-tile" href="https://wturner7.weebly.com/education-part-2.html" target="_blank">
                 <img class="project-image" src="https://wturner7.weebly.com/uploads/5/9/1/2/5912879/desktop-page_orig.jpg" alt="project" />
@@ -50,7 +50,7 @@
             </a>
         </div>
     </section>
-
+    https://starwars-visualguide.com/assets/img/films/7.jpg
     <!--start of footer-->
 
     <section id="contact">
