added more code, and images

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li> <a href="#projects">Work</a> </li>
                 <li> <a href="#contact">Contact</a> </li>
                 <li> <a href="#starwars.html"> StarWars</a> </li>
+                <li> <a href="#Pokemon.html"> #Pokemon</a> </li>
             </ul>
         </nav>
     </header>
@@ -43,10 +44,10 @@
                 <p class="project-title">
                     <span> Star Wars Fun </span> </p>
             </a>
-            <a class="project-tile" href="https://wturner7.weebly.com/education-part-2.html" target="_blank">
-                <img class="project-image" src="https://wturner7.weebly.com/uploads/5/9/1/2/5912879/desktop-page_orig.jpg" alt="project" />
+            <a class="project-tile" href="Pokemon.html" target="_blank">
+                <img class="project-image" src="../Assets/images/1.png" alt="project" />
                 <p class="project-title">
-                    <span> Past College Projects </span></p>
+                    <span> Pokemon trading Card Fun </span></p>
             </a>
         </div>
     </section>
