--- a/planets.html
+++ b/planets.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style/planets-style.css">
-    <title>Document</title>
+    <title>Star Wars Plants</title>
 </head>
 
 <body>
+    <Main>
 
+    </Main>
+    <!-- look at main.js -->
 </body>
+<script type="module" src="../js/starwars-planets.js">
+</script>
 
 </html>
