added senators file to project

--- a/Pokemon.html
+++ b/Pokemon.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-    <link href="/styles/pokemon.css" rel="stylesheet">
+    <link href="./styles/pokemon.css" rel="stylesheet">
     <title>Pokemon Trading Card Fun!</title>
 </head>
 
@@ -20,7 +20,5 @@
     </main>
     <script type="module" src="../js/pokemon.js">
         <script>
-            < /body>
-
-            <
+            < /body> <
             /html>
