re-added pokemon pictures

--- a/Pokemon.html
+++ b/Pokemon.html
@@ -12,13 +12,19 @@
 
 <body>
     <main>
+        <header></header>
         <div class="scene">
             <div class="card">
-                <div class="charDiv">
-                    <div class="picDiv">
+                <div class="card_face card_face--front"></div>
+                <div class="card_face card_face--back"></div>
+            </div>
+        </div>
+        <div class="charDiv">
+            <div class="picDiv">
 
     </main>
-    <script type="module" src="../js/pokemon.js">
-        <script>
-            < /body> <
-            /html>
+    <script type="module" src="/js/pokemon.js">
+    </script>
+</body>
+
+</html>
