trouble shooting the problem with the DOM

--- a/Pokemon.html
+++ b/Pokemon.html
@@ -2,28 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-    <link href="./styles/pokemon.css" rel="stylesheet">
-    <title>Pokemon Trading Card Fun!</title>
+    <link rel="stylesheet" href="./styles/pokemon.css">
+    <title>Pokemon Card Fun!</title>
 </head>
 
 <body>
+    <header></header>
+    <h1>Pokemon Page</h1>
+    <h3> here are some pokemon through JavaScript.</h3>
+    <h4> click or hover over the cards to make them turn over and reveal their info. </h4>
     <main>
-        <header></header>
+
         <div class="scene">
-            <div class="card">
-                <div class="card_face card_face--front"></div>
-                <div class="card_face card_face--back"></div>
-            </div>
-        </div>
-        <div class="charDiv">
-            <div class="picDiv">
+            <div class="card"></div>
+            <div class="card__face"></div>
+            <div class="card_face card_face--front"></div>
+            <div class="card_face card_face--back"></div>
+            <div class="charDiv"></div>
+            <div class="picDiv"></div>
+
+
+
 
     </main>
-    <script type="module" src="/js/pokemon.js">
+    <script type="module" src="./js/pokemon.js">
     </script>
 </body>
 
