--- a/starwars.html
+++ b/starwars.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="../styles/starwars-styles.css" rel="stylesheet">
+    <link href="./styles/starwars-styles.css" rel="stylesheet">
     <title>Star Wars Fun!</title>
 </head>
 
@@ -18,7 +18,7 @@
 
         <!-- look at main.js -->
     </main>
-    <script type="module" src="../js/starwars.js">
+    <script type="module" src="./js/starwars.js">
     </script>
 </body>
 
