--- a/Pokemon.html
+++ b/Pokemon.html
@@ -17,18 +17,17 @@
     <h4> click or hover over the cards to make them turn over and reveal their info. </h4>
     <main>
 
-        <div class="scene">
+<!--         <div class="scene">
             <div class="card"></div>
             <div class="card__face"></div>
             <div class="card_face card_face--front"></div>
             <div class="card_face card_face--back"></div>
             <div class="charDiv"></div>
             <div class="picDiv"></div>
-
-
-
+</div> -->
 
     </main>
+    <button id="newPokemon">New Pokemon</button>
     <script type="module" src="./js/pokemon.js">
     </script>
 </body>
