--- a/Pokemon.html
+++ b/Pokemon.html
@@ -11,23 +11,35 @@
 </head>
 
 <body>
-    <header></header>
-    <h1>Pokemon Page</h1>
-    <h3> here are some pokemon through JavaScript.</h3>
-    <h4> click or hover over the cards to make them turn over and reveal their info. </h4>
+    <nav id="navbar">
+        <ul id="navlist">
+            <li> <a href="index.html">Home</a> </li>
+
+            <li> <a href="starwars.html"> StarWars</a> </li>
+            <li> <a href="Pokemon.html"> Pokemon</a> </li>
+        </ul>
+    </nav>
+    <header>
+        <h1>Pokemon Page</h1>
+        <h3> here are some pokemon through JavaScript.</h3>
+        <h4> click or hover over the cards to make them turn over and reveal their info. </h4>
+    </header>
     <main>
 
-<!--         <div class="scene">
+        <!-- javascript adds the following into it...
+            <div class="scene">
             <div class="card"></div>
             <div class="card__face"></div>
             <div class="card_face card_face--front"></div>
             <div class="card_face card_face--back"></div>
             <div class="charDiv"></div>
             <div class="picDiv"></div>
-</div> -->
+
+        </div>
+-->
 
     </main>
-    <button id="newPokemon">New Pokemon</button>
+    <button id="newPokemon">New Pokemon card</button>
     <script type="module" src="./js/pokemon.js">
     </script>
 </body>
