--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <header>
         <nav id="navbar">
             <ul id="navlist">
-                <li> <a href="welcome-section">About</a> </li>
+                <li> <a href="#welcome-section">About</a> </li>
                 <li> <a href="#projects">Work</a> </li>
                 <li> <a href="#contact">Contact</a> </li>
-                <li> <a href="#starwars.html"> StarWars</a> </li>
-                <li> <a href="#Pokemon.html"> #Pokemon</a> </li>
+                <li> <a href="starwars.html"> StarWars</a> </li>
+                <li> <a href="Pokemon.html"> Pokemon</a> </li>
             </ul>
         </nav>
     </header>
@@ -36,7 +36,7 @@
             <a id="profile-link" class="project-tile" href="https://wturner7.weebly.com/education-part-2.html" target="_blank">
                 <img class="project-image" src="https://wturner7.weebly.com/uploads/5/9/1/2/5912879/turner-creative-animalhybrid-2_orig.jpg" alt="project" />
                 <p class="project-title">
-                    <span> My Community College Blog </span>
+                    <span> My S.L.C.C. Blog </span>
                 </p>
             </a>
             <a class="project-tile" href="starwars.html" target="_blank">
@@ -45,9 +45,9 @@
                     <span> Star Wars Fun </span> </p>
             </a>
             <a class="project-tile" href="Pokemon.html" target="_blank">
-                <img class="project-image" src="../Assets/images/1.png" alt="project" />
+                <img class="project-image" src="./Assets/images/pokemon_card_backside_in_hd.png" alt="project" />
                 <p class="project-title">
-                    <span> Pokemon trading Card Fun </span></p>
+                    <span> Pokemon Card Fun </span></p>
             </a>
         </div>
     </section>
