--- a/starwars.html
+++ b/starwars.html
@@ -7,12 +7,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./styles/starwars-styles.css" rel="stylesheet">
     <title>Star Wars Fun!</title>
+    /*
+    <nav id="navbar">
+        <ul id="navlist">
+            <li> <a href="index.html">Home</a> </li>
+            <li> <a href="starwars.html"> StarWars</a> </li>
+            <li> <a href="Pokemon.html"> Pokemon</a> </li>
+        </ul>
+    </nav>*/
 </head>
 
 <body>
-    <h1> StarWars Information Gallery</h1>
-    <header> </header>
 
+    <header>
+        <h1> StarWars Information Gallery</h1>
+    </header>
+    <button id="maleButton">Male Characters</button>
+    <button id="femaleButton">Female Characters</button>
+    <button id="otherButton"></button>
     <main>
 
 
