--- a/starwars.html
+++ b/starwars.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./styles/starwars-styles.css" rel="stylesheet">
     <title>Star Wars Fun!</title>
-    /*
+    <!--
     <nav id="navbar">
         <ul id="navlist">
             <li> <a href="index.html">Home</a> </li>
             <li> <a href="starwars.html"> StarWars</a> </li>
             <li> <a href="Pokemon.html"> Pokemon</a> </li>
         </ul>
-    </nav>*/
+    </nav> -->
 </head>
 
 <body>
