--- a/starwars.html
+++ b/starwars.html
@@ -22,8 +22,8 @@
     <header>
         <h1> StarWars Information Gallery</h1>
     </header>
-    <button id="maleButton">Male Characters</button>
-    <button id="femaleButton">Female Characters</button>
+    <button id="maleButton"></button>
+    <button id="femaleButton"></button>
     <button id="otherButton"></button>
     <main>
 
