making changes to index  file

--- a/index.html
+++ b/index.html
@@ -49,9 +49,14 @@
                 <p class="project-title">
                     <span> Pokemon Card Fun </span></p>
             </a>
+            <a class="project-tile" href="senators.html" target="_blank">
+                <img class="project-image" src="./Assets/images/Doug_Jones_2017.jpg" alt="project" />
+                <p class="project-title">
+                    <span> Pokemon Card Fun </span></p>
+            </a>
         </div>
     </section>
-   
+
     <!--start of footer-->
 
     <section id="contact">
