tried to add the nav,  in progress!

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li> <a href="#contact">Contact</a> </li>
                 <li> <a href="starwars.html"> StarWars</a> </li>
                 <li> <a href="Pokemon.html"> Pokemon</a> </li>
+                <li> <a href="senators.html"> Senators</a> </li>
             </ul>
         </nav>
     </header>
@@ -52,7 +53,7 @@
             <a class="project-tile" href="senators.html" target="_blank">
                 <img class="project-image" src="./Assets/images/Doug_Jones_2017.jpg" alt="project" />
                 <p class="project-title">
-                    <span> Pokemon Card Fun </span></p>
+                    <span> Senators Fun </span></p>
             </a>
         </div>
     </section>
@@ -66,6 +67,8 @@
         <div class="contact-links">
             <a href="https://www.facebook.com/austin.turner.3591?ref=bookmarks" target="_blank" class="btn contact-details">
                 <i class="fab fa-facebook-square"></i> Facebook </a>
+            <a id="profile-link" href="https://www.linkedin.com/in/austin-turner-aba9b4b1" target="_blank" class="btn contact-details"> LinkedIn</a>
+
             <a id="profile-link" href="https://github.com/PirateTurner1" target="_blank" class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
             <p> This is Austin Turner's Portfolio for Class of THOR 1600. </p>
     </footer>
