--- a/senators.html
+++ b/senators.html
@@ -11,6 +11,19 @@
 </head>
 
 <body>
+    <header>
+        <h1>StarWars Fun</h1>
+    </header>
+    <nav id="navbar">
+        <ul id="navlist">
+            <li> <a href="index.html">Home</a> </li>
+
+            <li> <a href="starwars.html"> StarWars</a> </li>
+            <li> <a href="Pokemon.html"> Pokemon</a> </li>
+            <li> <a href="senators.html"> Senators</a> </li>
+        </ul>
+        <div class="keepOpen"></div>
+    </nav>
     <main class="container">
 
 
