--- a/senators.html
+++ b/senators.html
@@ -6,30 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-    <link rel="stylesheet" type="text/css" href="Senators.css">
+    <link rel="stylesheet" href="./styles/Senators.css">
     <title>Senators Project</title>
 </head>
 
 <body>
     <header>
-        <h1>StarWars Fun</h1>
+        <h1>Senators Fun</h1>
+
+        <nav id="navbar">
+            <ul id="navlist">
+                <li> <a href="index.html">Home</a> </li>
+
+                <li> <a href="starwars.html"> StarWars</a> </li>
+                <li> <a href="Pokemon.html"> Pokemon</a> </li>
+                <li> <a href="senators.html"> Senators</a> </li>
+            </ul>
+            <div class="keepOpen"></div>
+        </nav>
     </header>
-    <nav id="navbar">
-        <ul id="navlist">
-            <li> <a href="index.html">Home</a> </li>
-
-            <li> <a href="starwars.html"> StarWars</a> </li>
-            <li> <a href="Pokemon.html"> Pokemon</a> </li>
-            <li> <a href="senators.html"> Senators</a> </li>
-        </ul>
-        <div class="keepOpen"></div>
-    </nav>
     <main class="container">
-
 
     </main>
 
-    <script type="module" src="Senators.js">
+    <script type="module" src="./js/Senators.js">
     </script>
 </body>
 
