tried to make more changes but failed

--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
                 <li> <a href="#welcome-section">About</a> </li>
                 <li> <a href="#projects">Work</a> </li>
                 <li> <a href="#contact">Contact</a> </li>
-                <li> <a href="starwars.html"> StarWars</a> </li>
-                <li> <a href="Pokemon.html"> Pokemon</a> </li>
-                <li> <a href="senators.html"> Senators</a> </li>
+
             </ul>
         </nav>
     </header>
     <section id="welcome-section">
         <h1> Welcome To My Portfolio</h1>
-        <p> A UVU student Diving in Web Developement and Loving It. </p>
+        <p> A UVU student Diving in Web Development and Loving It. </p>
     </section>
 
     <!-- start of project section -->
