--- a/starwars.html
+++ b/starwars.html
@@ -7,14 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./styles/starwars-styles.css" rel="stylesheet">
     <title>Star Wars Fun!</title>
-    <!--
+
     <nav id="navbar">
         <ul id="navlist">
             <li> <a href="index.html">Home</a> </li>
-            <li> <a href="starwars.html"> StarWars</a> </li>
-            <li> <a href="Pokemon.html"> Pokemon</a> </li>
         </ul>
-    </nav> -->
+        <div class="keepOpen"></div>
+    </nav>
 </head>
 
 <body>
@@ -22,9 +21,9 @@
     <header>
         <h1> StarWars Information Gallery</h1>
     </header>
-    <button id="maleButton"></button>
+    <!--<button id="maleButton"></button>
     <button id="femaleButton"></button>
-    <button id="otherButton"></button>
+    <button id="otherButton"></button>-->
     <main>
 
 
