--- a/senators.html
+++ b/senators.html
@@ -12,15 +12,11 @@
 
 <body>
     <header>
-        <h1>Senators Fun</h1>
+        <h1> Calling all Senators </h1>
 
         <nav id="navbar">
             <ul id="navlist">
                 <li> <a href="index.html">Home</a> </li>
-
-                <li> <a href="starwars.html"> StarWars</a> </li>
-                <li> <a href="Pokemon.html"> Pokemon</a> </li>
-                <li> <a href="senators.html"> Senators</a> </li>
             </ul>
             <div class="keepOpen"></div>
         </nav>
