--- a/index.html
+++ b/index.html
@@ -27,28 +27,29 @@
     </section>
 
     <!-- start of project section -->
-    <section id="projects" class="projects-section">
+    <section id="projects" class="project-section">
         <h2 class="projects-section-header">
             <u>These are some of my projects</u>
         </h2>
         <div class="Projects-grid">
-            <a id="profile-link" class="project-tile" href="https://wturner7.weebly.com/education-part-2.html" target="_blank">
+            <!--id="profile-link"-->
+            <a class="project-tiles a" href="https://wturner7.weebly.com/education-part-2.html" target="_blank">
                 <img class="project-image" src="https://wturner7.weebly.com/uploads/5/9/1/2/5912879/turner-creative-animalhybrid-2_orig.jpg" alt="project" />
                 <p class="project-title">
                     <span> My S.L.C.C. Blog </span>
                 </p>
             </a>
-            <a class="project-tile" href="starwars.html" target="_blank">
+            <a class="project-tiles b" href="starwars.html" target="_blank">
                 <img class="project-image" src="https://starwars-visualguide.com/assets/img/films/7.jpg" alt="project" />
                 <p class="project-title">
                     <span> Star Wars Fun </span> </p>
             </a>
-            <a class="project-tile" href="Pokemon.html" target="_blank">
+            <a class="project-tiles c" href="Pokemon.html" target="_blank">
                 <img class="project-image" src="./Assets/images/pokemon_card_backside_in_hd.png" alt="project" />
                 <p class="project-title">
                     <span> Pokemon Card Fun </span></p>
             </a>
-            <a class="project-tile" href="senators.html" target="_blank">
+            <a class="project-tile d" href="senators.html" target="_blank">
                 <img class="project-image" src="./Assets/images/Doug_Jones_2017.jpg" alt="project" />
                 <p class="project-title">
                     <span> Senators Fun </span></p>
@@ -70,7 +71,7 @@
             <a id="profile-link" href="https://github.com/PirateTurner1" target="_blank" class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
             <p> This is Austin Turner's Portfolio for Class of THOR 1600. </p>
     </footer>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"> -->
     </script>
 </body>
 
