starwars buttons failed to work

--- a/starwars.html
+++ b/starwars.html
@@ -20,6 +20,11 @@
 
     <header>
         <h1> StarWars Information Gallery</h1>
+        <button>male Characters</button>
+        <button>Female Characters</button>
+        <button>Other Characters</button>
+        <button>Planets</button>
+        <button>Ships</button>
     </header>
     <!--<button id="maleButton"></button>
     <button id="femaleButton"></button>
