fixed the problem with the front portfolio

--- a/starwars.html
+++ b/starwars.html
@@ -20,7 +20,7 @@
 
     <header>
         <h1> StarWars Information Gallery</h1>
-        <button>male Characters</button>
+        <button id="maleCharacter">male Characters</button>
         <button>Female Characters</button>
         <button>Other Characters</button>
         <button>Planets</button>
