--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
         </h2>
         <div class="Projects-grid">
             <!--id="profile-link"-->
-            <a class="project-tiles a" href="https://wturner7.weebly.com/education-part-2.html" target="_blank">
+            <a class="project-tiles" href="https://wturner7.weebly.com/education-part-2.html" target="_blank">
                 <img class="project-image" src="https://wturner7.weebly.com/uploads/5/9/1/2/5912879/turner-creative-animalhybrid-2_orig.jpg" alt="project" />
                 <p class="project-title">
                     <span> My S.L.C.C. Blog </span>
                 </p>
             </a>
-            <a class="project-tiles b" href="starwars.html" target="_blank">
+            <a class="project-tiles" href="starwars.html" target="_blank">
                 <img class="project-image" src="https://starwars-visualguide.com/assets/img/films/7.jpg" alt="project" />
                 <p class="project-title">
                     <span> Star Wars Fun </span> </p>
             </a>
-            <a class="project-tiles c" href="Pokemon.html" target="_blank">
+            <a class="project-tiles" href="Pokemon.html" target="_blank">
                 <img class="project-image" src="./Assets/images/pokemon_card_backside_in_hd.png" alt="project" />
                 <p class="project-title">
                     <span> Pokemon Card Fun </span></p>
             </a>
-            <a class="project-tile d" href="senators.html" target="_blank">
+            <a class="project-tile" href="senators.html" target="_blank">
                 <img class="project-image" src="./Assets/images/Doug_Jones_2017.jpg" alt="project" />
                 <p class="project-title">
                     <span> Senators Fun </span></p>
