failed to fix button problems

--- a/starwars.html
+++ b/starwars.html
@@ -20,9 +20,9 @@
 
     <header>
         <h1> StarWars Information Gallery</h1>
-        <button id="maleCharacter">male Characters</button>
-        <button>Female Characters</button>
-        <button>Other Characters</button>
+        <button id="maleCharacter">Male</button>
+        <button id="femaleButton">Female</button>
+        <button id="otherButton">Other</button>
         <button>Planets</button>
         <button>Ships</button>
     </header>
